# yaal-cpp-poc

./: CMakeLists.txt  analysis.cpp  bos_math.md  debug_compare.cpp  spec.md  statement-short.md  statement.md  test_parallel_bos.cpp
.github/workflows/: cmake-single-platform.yml
include/yaal/: buffer.hpp  counting_parser.hpp  fast_counting_parser.hpp  fast_event_parser.hpp  parser_base.hpp  reference_parser.hpp
src/: benchmark.cpp
tests/: parser_tests.cpp
